# aivo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  test.yml
npm/: LICENSE  README.md  package.json
npm/lib/: checksum.js  launcher.js  paths.js  platform.js  update.js
npm/scripts/: postinstall.js
npm/test/: checksum.test.js  launcher.test.js  platform.test.js  postinstall.test.js  update.test.js
scripts/: install.sh  manual-release.sh
src/: cli.rs  cli_args.rs  constants.rs  errors.rs  key_resolution.rs  lib.rs  main.rs  run.rs  style.rs  tui.rs
src/commands/: alias.rs  amp.rs  audio.rs  chat.rs  chat_request_builder.rs  chat_response_parser.rs  chat_tui.rs  chat_tui_format.rs  context.rs  doctor.rs  image.rs  info.rs  keys.rs  keys_ui.rs  logs.rs  ls.rs  mcp_serve.rs  mod.rs  models.rs  run.rs  serve.rs  start.rs  stats.rs  update.rs  video.rs
src/commands/chat_tui/: app_state_impl.rs  event_loop_impl.rs  input_impl.rs  key_handler_impl.rs  menu.rs  overlay_render_impl.rs  render.rs  render_impl.rs  runtime_impl.rs  session_impl.rs  shared.rs  storage.rs  system.rs  tests.rs
src/data/: providers.json
src/services/: ai_launcher.rs  amp_bridge.rs  amp_threads.rs  amp_trust.rs  anthropic_chat_request.rs  anthropic_chat_response.rs  anthropic_route_pipeline.rs  anthropic_router.rs  anthropic_to_openai_router.rs  api_key_store.rs  atomic_write.rs  audio_cache.rs  audio_gen.rs  browser_open.rs  chat_session_store.rs  claude_code_router.rs  claude_oauth.rs  codex_home_shadow.rs  codex_model_map.rs  codex_oauth.rs  codex_oauth_callback.rs  codex_router.rs  context_ingest.rs  context_render.rs  context_window.rs  copilot_auth.rs  copilot_router.rs  device_fingerprint.rs  directory_starts.rs  environment_injector.rs  gemini_home_shadow.rs  gemini_oauth.rs  gemini_oauth_callback.rs  gemini_router.rs  global_stats.rs  http_debug.rs  http_utils.rs  image_gen.rs  key_compat.rs  known_providers.rs  (+40 more)
tests/: cli_parsing.rs  debug_log_chat.rs  debug_log_streaming.rs  environment_injection.rs  environment_injector_test.rs  key_lifecycle.rs  mcp_serve_integration.rs  model_names.rs
