[package]
name = "aivo"
version = "0.1.0"
edition = "2021"
authors = ["yuanchuan"]
description = "CLI tool for unified access to AI coding assistants (Claude, Codex, Gemini)"
license = "MIT"
repository = "https://github.com/yuanchuan/aivo"

[lib]
doctest = false

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.43", features = ["rt", "macros", "process", "signal", "time", "fs", "net", "sync"] }
futures-util = "0.3"
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["service"] }
http = "1.1"
http-body = "1.0"
http-body-util = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption
aes = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
typenum = "1.17"
zeroize = { version = "1.8", features = ["derive"] }

# Utils
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
whoami = "1.5"
rustyline = "14"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }


[features]
default = []
test-fast-crypto = []

[dev-dependencies]
tempfile = "3.0"
base64 = "0.22"

[profile.release]
opt-level = "z"     # Optimize for size instead of speed
lto = true
strip = true
codegen-units = 1
panic = "abort"     # Remove unwinding code
