[package]
name = "aivo"
version = "0.8.0"
edition = "2024"
authors = ["yuanchuan"]
description = "Run Claude Code, Codex, and Gemini CLI across multiple providers"
license = "MIT"
repository = "https://github.com/yuanchuan/aivo"

[lib]
doctest = false

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.43", features = ["rt", "macros", "process", "signal", "time", "fs", "net", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption
aes = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
zeroize = { version = "1.8", features = ["derive"] }

# Utils
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1.0"
rustyline = "14"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }


[features]
default = []
test-fast-crypto = []

[dev-dependencies]
tempfile = "3.0"

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.dev.package."*"]
debug = false

[profile.test]
debug = "line-tables-only"
incremental = true

[profile.test.package."*"]
debug = false

[profile.release]
opt-level = "s"     # Optimize for size (balanced: smaller than "2", faster than "z")
lto = true
strip = true
codegen-units = 1
panic = "abort"     # Remove unwinding code
